# UK-Online-Retail-Data-Analysis-UCI-Dataset-

./: .gitignore  README.md  pyproject.toml
data/: rfm_data.csv
notebook/: exploratory_data_analysis.ipynb  initial_data_processing.ipynb
reports/: findings.md
reports/power_bi_dashboard/: Strategic Retail Intelligence Dashboard.pbix
reports/power_bi_dashboard/bi_tables/: cancellation_rate.csv  monthly_aov.csv  product_returned_rate_data.csv  return_rate.csv  rfm_data.csv
