[project]
name = "uci-online-retail-dataset"
version = "0.1.0"
description = "Analyzing data from a UK-based and registered non-store online retail"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
